// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find-module should find module 1`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';
import { TestComponent } from './test.component';



@NgModule({
  declarations: [
    TestComponent
  ],
  imports: [
    CommonModule
  ]
})
export class TestModule { }
"
`;

exports[`find-module should find standalone component 1`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';



@NgModule({
  declarations: [],
  imports: [
    CommonModule
  ]
})
export class TestModule { }
"
`;
